<resources>
    <string name="body_text">Text</string>
    <string name="let_s_find_a_doctor_for_you">Let\'s find a doctor for you!</string>
    <string name="search_by_doctors_specialities_amp_diseases"><![CDATA[Search by Doctors, Specialities & Diseases]]></string>
    <string name="my_appointments">My Appointments</string>
    <string name="general_physicians">General Physicians</string>
    <string name="speciality">Speciality</string>
    <string name="experience">Experience</string>
    <string name="fee">Fee</string>
    <string name="app_rating">App Rating</string>
    <string name="reviews">Reviews</string>
    <string name="top_diseases">Common Diseases</string>
    <string name="dash">-</string>
    <string name="top_specialities">Top Specialities</string>
    <string name="book_appointments_in_three_easy_steps">Book appointments in three easy steps</string>
    <string name="search_for_doctors_by_name_or_specialty">Search for doctors by name or specialty.</string>
    <string name="most_common_diseases">Most Common Diseases</string>
    <string name="select_a_doctor_accordingly">Select a doctor accordingly.</string>
    <string name="book_a_video_consultation_and_get_quality_medical_help">Book a video consultation and get quality medical help.</string>
    <string name="view_all">View All</string>
    <string name="recent_searches">Recent searches</string>
    <string name="all_diseases">All Diseases</string>
    <string name="no_record_found">No Record Found</string>
    <string name="all_specialities">All Specialities</string>
    <string name="filter_amp_sort"><![CDATA[Filter & Sort]]></string>
    <string name="book_appointment">Book Appointment</string>
    <string name="satisfaction_nscore">Satisfaction\nscore</string>
    <string name="positive_reviews">Positive\nreviews</string>
    <string name="years_of_nsaving_lives">Years of\nsaving lives</string>
    <string name="about">About</string>
    <string name="book_video_consultation_now">Book Video Consultation Now</string>
    <string name="book_a_video_consultation">Book a Video Consultation</string>
    <string name="degree">Degree</string>
    <string name="preferred_day">Preferred Day</string>
    <string name="saturday">Saturday</string>
    <string name="_14_january">14 January</string>
    <string name="_12">12</string>
    <string name="preferred_time_slot">Preferred time slot</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="find_a_doctor">Find a doctor</string>
    <string name="search_by_speciality">Search by Speciality</string>
    <string name="search_by_disease">Search by Disease</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_name">Patient Name</string>
    <string name="prescription">Prescription</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="date">Date</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="msg_on_camera_permission_denied">You have denied to permission to access camera, to provide permission click on Settings button.</string>
    <string name="microphone">Microphone</string>
    <string name="camera">Camera</string>
    <string name="notification">Notification</string>
    <string name="msg_on_storage_permission_denied">You have denied to permission to access gallery, to provide permission click on Settings button.</string>
    <string name="upcoming">Upcoming</string>
    <string name="previous">Previous</string>
    <string name="time">Time</string>
    <string name="view_prescription">View Prescription</string>
    <string name="status">Status: </string>
    <string name="consultation_time">Consultation Time</string>
    <string name="call_doctor">Call Doctor</string>
    <string name="for_a_better_experience">For a better experience:</string>
    <string name="keep_your_medical_nrecords_with_you">Keep your medical\nrecords with you.</string>
    <string name="have_a_calm_nbackground">Have a calm\nbackground</string>
    <string name="enable_a_stable_ninternet_connection">Enable a stable\ninternet connection</string>
    <string name="internet_strength">Internet Strength</string>
    <string name="official">Official</string>
    <string name="ringing">Ringing</string>
    <string name="cancel">Cancel</string>
    <string name="calling">Calling</string>
    <string name="deny">Deny</string>
    <string name="allow">Allow</string>
    <string name="msg_on_call_permission_denied">You have denied call permission, inorder to provide permission click on settings</string>
    <string name="doctor">Doctor</string>
    <string name="for_video_consultation">For Video Consultation</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="stop_video">Stop Video</string>
    <string name="mute_mic">Mute mic</string>
    <string name="end_call">End Call</string>
    <string name="send_reports">Send Reports</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="don_t_worry_we_re_trying_to_get_back_to_you">Don\'t worry, we\'re trying to get back to you.</string>
    <string name="try_again">Try Again</string>
    <string name="help">Help</string>
    <string name="is_doctor_requested_call">isDoctorRequestedCall</string>
    <string name="heading">Heading</string>
    <string name="please_wait">Please Wait</string>
    <string name="processing_payment">Processing Payment ...</string>
    <string name="saving_transaction">Saving Transaction ...</string>
</resources>