<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/five"
    android:elevation="@dimen/five"
    app:cardCornerRadius="@dimen/five"
    app:cardUseCompatPadding="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doctor_profile_header_gradient">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_picture_image_view"
            android:layout_width="@dimen/ninty"
            android:layout_height="@dimen/ninty"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginTop="@dimen/fifteen"
            android:src="@drawable/m_doctor_placholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appointment_status_views_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginTop="@dimen/ten"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/doctor_picture_image_view"
            app:layout_constraintStart_toStartOf="@id/doctor_picture_image_view"
            app:layout_constraintTop_toBottomOf="@+id/doctor_picture_image_view" >

            <com.marham.marhamvideocalllibrary.customviews.BodyText
                android:id="@+id/appointment_status_heading_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:textSize="@dimen/twelve_text_size"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.marham.marhamvideocalllibrary.customviews.BodyText
                android:id="@+id/appointment_status_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dash"
                android:layout_marginStart="@dimen/five"
                android:textStyle="bold"
                android:textSize="@dimen/twelve_text_size"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/appointment_status_heading_text_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_name_text_view"
            android:layout_marginStart="@dimen/twenty"
            android:text="@string/doctor_name"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/five"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/doctor_picture_image_view"
            app:layout_constraintStart_toEndOf="@+id/doctor_picture_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_speciality_text_view"
            android:text="@string/speciality"
            android:textColor="@color/white"
            android:textSize="@dimen/twelve_text_size"
            app:layout_constraintTop_toBottomOf="@+id/doctor_name_text_view"
            app:layout_constraintStart_toStartOf="@+id/doctor_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_degree_text_view"
            android:text="@string/degree"
            android:textColor="@color/white"
            android:textSize="@dimen/twelve_text_size"
            app:layout_constraintTop_toBottomOf="@+id/doctor_speciality_text_view"
            app:layout_constraintStart_toStartOf="@+id/doctor_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginEnd="@dimen/twenty"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="@dimen/thirty">

            <com.marham.marhamvideocalllibrary.customviews.MyImageView
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="@dimen/fifteen"
                android:id="@+id/calender_image_view"
                android:background="@drawable/calender_icon_white_vector"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="@dimen/fifteen"/>

            <com.marham.marhamvideocalllibrary.customviews.BodyText
                android:id="@+id/date_text_view"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="@dimen/twelve_text_size"
                android:layout_marginStart="@dimen/five"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/calender_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:id="@+id/line1"
                android:layout_width="@dimen/one"
                android:layout_marginStart="@dimen/five"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/white"
                app:layout_constraintStart_toEndOf="@+id/date_text_view"
                android:layout_height="@dimen/fifteen"/>

            <com.marham.marhamvideocalllibrary.customviews.BodyText
                android:id="@+id/time_text_view"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/time"
                android:textColor="@color/white"
                android:textSize="@dimen/twelve_text_size"
                android:layout_marginStart="@dimen/five"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/line1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>