<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_layout"
    android:layout_width="@dimen/hundred_ten"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/five"
    android:alpha="0.8"


    app:cardBackgroundColor="@color/top_doctor_green"
    app:cardCornerRadius="@dimen/five"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/six"
        android:paddingEnd="@dimen/six">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctor_picture_image_view"
            android:layout_width="@dimen/fifty_five"
            android:layout_height="@dimen/forty_five"
            android:layout_marginTop="@dimen/ten"
            android:src="@drawable/m_doctor_placholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="askjdhaskjdhkasjhdkjashdkjashdkjashdkjashdaksjdhkjashdkjskjdhjkashdk"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/eleven_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_picture_image_view" />

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_speciality_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/speciality"
            android:textColor="@color/black"
            android:textSize="@dimen/ten_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_name_text_view" />

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_experience_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/two"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/experience"
            android:textColor="@color/black"
            android:textSize="@dimen/ten_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_speciality_text_view" />

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_fee_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/ten"
            android:maxLines="1"
            android:text="@string/fee"
            android:textColor="@color/black"
            android:textSize="@dimen/ten_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_experience_text_view" />


        <com.marham.marhamvideocalllibrary.customviews.MyImageView
            android:id="@+id/doctor_ratings_stars"
            android:layout_width="@dimen/ten"
            android:layout_height="@dimen/ten"
            android:layout_marginTop="@dimen/two"
            android:layout_marginEnd="@dimen/one"
            android:src="@drawable/m_doctor_placholder"
            app:layout_constraintBottom_toBottomOf="@id/doctor_ratings_text_view"
            app:layout_constraintEnd_toStartOf="@+id/doctor_ratings_text_view"
            app:layout_constraintTop_toTopOf="@+id/doctor_ratings_text_view" />

        <com.marham.marhamvideocalllibrary.customviews.BodyText
            android:id="@+id/doctor_ratings_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:layout_marginBottom="@dimen/ten"
            android:maxLines="1"
            android:text="@string/app_rating"
            android:textColor="@color/black"
            android:textSize="@dimen/ten_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/doctor_experience_text_view" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>